--- a/css/smallscreen.css
+++ b/css/smallscreen.css
@@ -43,7 +43,7 @@
 @media only screen and (orientation: portrait) {
   
 .wrapper {
-    grid-template-columns: 1fr;
+    grid-template-columns: 100vw;
     grid-template-rows: repeat(8, auto);
     grid-template-areas: 
     "pics"
@@ -55,67 +55,61 @@
     "hobbies"
     "contact";
 }
-  
-#name {
-    background: white;
-    grid-area: name;
-    padding: 65;
-    text-align: center;
-}
 
 #pics {
     min-height: 328px;
     background: #81c683;
     grid-area: pics;
-    padding-top: 64px;
+    padding-top: 19.5%;
+    padding-bottom: 12.19%;
     text-align: center;
 }
-      
-#name {
+  
+  #name {
     background: white;
     grid-area: name;
-    padding-left: 65px;
-    padding-top: 119px;
-}
-      
-#formation {
-        background: white;
-        grid-area: formation;
-        padding: 27px 54px 51px 65px;
-}
-      
-#experiences {
-        background: white;
-        grid-area: experiences;
-        padding: 27px 54px 51px 65px;;
-}
-      
-#recommandation {
-        background: white;
-        grid-area: recommandation;
-        padding: 27px 54px 51px 65px;
-}
-      
-#description {
-        background: #81c683;
-        grid-area: description;
-        padding: 84px 46px 39px 49px;
-        position: relative;
-}
-      
-#hobbies {
-        background: #81c683;
-        grid-area: hobbies;
-        padding: 84px 46px 39px 49px;
-        position: relative;
-}
-      
-#contact {
+    padding: 8%;
+    text-align: center;
+  }
+  
+  #formation {
+    background: white;
+    grid-area: formation;
+    padding: 2.3rem 6.82% 4.25rem 8%;
+  }
+  
+  #experiences {
+    background: white;
+    grid-area: experiences;
+    padding: 2.3rem 6.82% 4.25rem 8%;
+  }
+  
+  #recommandation {
+    background: white;
+    grid-area: recommandation;
+    padding: 2.3rem 6.82% 4.25rem 8%;
+  }
+  
+  #description {
+    background: #81c683;
+    grid-area: description;
+    padding: 7rem 11.97% 3.5rem 12.76%;
+    position: relative;
+  }
+  
+  #hobbies {
+    background: #81c683;
+    grid-area: hobbies;
+    padding: 7rem 16.4% 3.5rem 16.4%;
+    position: relative;
+  }
+  
+  #contact {
     background: #81c683;
     grid-area: contact;
-    padding: 84px 46px 39px 49px;
+    padding: 7rem 11.97% 3.5rem 12.76%;
     position: relative;
-}
+  }
 
 /* -----------------FLEXBOX----------------- */
       
@@ -125,12 +119,12 @@
 }
       
 .date {
-    min-width: 182px;
+    width: 85.18%;
 }
       
 .event {
-    min-width: 442px;
-    margin-left: minmax(30px, 26.8%);
+    width: 85.18%;
+    margin: 0 0 50px 0;
 }
 
 /* -----------------TITLE----------------- */
@@ -157,7 +151,7 @@ h2.title_aside {
 
     .wrapper {
         display: grid;
-        grid-template-columns: 1fr 2.099fr;
+        grid-template-columns: 37.27vw 67.73vw;
         grid-template-rows: 330px 1.02fr 0.169fr 1.625fr 0.237fr 0.479fr;
         grid-template-areas:
             "pics name"
@@ -172,74 +166,73 @@ h2.title_aside {
         min-height: 328px;
         background: #81c683;
         grid-area: pics;
-        padding-top: 64px;
+        padding-top: 19.5%;
+        padding-bottom: 12.19%;
         text-align: center;
     }
       
-    #name {
+      #name {
         background: white;
         grid-area: name;
-        padding-left: 65px;
-        padding-top: 119px;
-    }
+        padding: 8%;
+      }
       
-    #formation {
+      #formation {
         background: white;
         grid-area: formation;
-        padding: 27px 54px 51px 65px;
-    }
+        padding: 2.3rem 6.82% 4.25rem 8%;
+      }
       
-    #experiences {
+      #experiences {
         background: white;
         grid-area: experiences;
-        padding: 27px 54px 51px 65px;;
-    }
+        padding: 2.3rem 6.82% 4.25rem 8%;
+      }
       
-    #recommandation {
+      #recommandation {
         background: white;
         grid-area: recommandation;
-        padding: 27px 54px 51px 65px;
-    }
+        padding: 2.3rem 6.82% 4.25rem 8%;
+      }
       
-    #description {
+      #description {
         background: #81c683;
         grid-area: description;
-        padding: 84px 46px 39px 49px;
+        padding: 7rem 11.97% 3.5rem 12.76%;
         position: relative;
-    }
+      }
       
-    #hobbies {
+      #hobbies {
         background: #81c683;
         grid-area: hobbies;
-        padding: 84px 46px 39px 49px;
+        padding: 7rem 16.4% 3.5rem 16.4%;
         position: relative;
-    }
+      }
       
-    #contact {
+      #contact {
         background: #81c683;
         grid-area: contact;
-        padding: 84px 46px 39px 49px;
+        padding: 7rem 11.97% 3.5rem 12.76%;
         position: relative;
-    }
+      }
       
     /* -----------------FLEXBOX----------------- */
       
     .containerA, .containerB {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
+        display:flex;
+        flex-direction: column;
     }
-      
+          
     .date {
-        min-width: 182px;
+        width: 22.58%;
     }
-      
+          
     .event {
-        min-width: 442px;
-        margin-left: minmax(30px, 26.8%);
+        width: 54.84%;
+        margin: 0 0 50px 26.8%;
     }
 
-     /* -----------------TITLE----------------- */
+    /* -----------------TITLE----------------- */
 
      .title_aside {
         display: block;
@@ -248,7 +241,7 @@ h2.title_aside {
         color: white;
         position: absolute;
         top: 0;
-        left:0;
+        left: 0;
         width: 100%;
         text-align: center;
     }
