--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,8 @@ h2 {
   margin-bottom: 4.5em;
 }
 
+/* -----------------ICON----------------- */
+
 #hobbies_icons {
   display: flex;
   flex-direction: row;
