--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,44 @@ body {
   }
 }
 
+@keyframes change_color {
+  
+  0%{
+    -webkit-color: #404040;
+    color: #404040;
+  }
+  50%{
+    -webkit-color: #81C784;
+    color: #81C784;
+  }
+  to{
+    -webkit-color: #404040;
+    color: #404040;
+  }
+}
+
+@keyframes change_color--start {
+  0%{
+    -webkit-color: #404040;
+    color: #404040;
+  }
+  to{
+    -webkit-color: #81C784;
+    color: #81C784;
+  }
+}
+
+@keyframes change_color--end {
+  0%{
+    -webkit-color: #81C784;
+    color: #81C784;
+  }
+  to{
+    -webkit-color: #404040;
+    color: #404040;
+  }
+}
+
 @keyframes pulse {
   0%{
     -webkit-transform:scaleX(1);
@@ -248,10 +286,41 @@ body {
 
 /* ---------------SECTION--------------- */
 
+.containerA {
+  background-color: white;
+  transition: color 0.3s;
+}
+
 .containerA:hover {
   background-color: #E8F5E9;
 }
 
 #formation:hover #formation_title, #experiences:hover #experiences_title, #recommandation:hover #recommandation_title {
-  color: #81C784;
+  animation-name: change_color--start;
+  animation-duration: 2s;
+  animation-timing-function: ease-in, ease-out;
+  -webkit-animation-name: change_color;
+  -webkit-animation-duration: 2s;
+  -webkit-animation-timing-function: ease-in, ease-out;
+}
+
+/* -----------------SCROLLBAR----------------- */
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px white; 
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #81C784; 
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #4CAF50;
 }
